--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,9 +1,5 @@
-<button (click)="clockwise()">CLOCKWISE</button>
-<button (click)="counterClockwise()">COUNTER-CLOCKWISE</button>
-
-<section>
-    <div [@moveBoxes]="positions[0]"></div>
-    <div [@moveBoxes]="positions[1]"></div>
-    <div [@moveBoxes]="positions[2]"></div>
-    <div [@moveBoxes]="positions[3]"></div>
-</section>
+<main>
+    <h1>
+        Welcome to Angular Animations!
+    </h1>
+</main>
