--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main {
+    min-height: 700px;
+    position: relative;
+    padding: 24px;
+}
+
+h1 {
+    color: #1976d2;
+    margin: 0 0 1em 0;
+    font-size: 28px;
+    font-style: italic;
+}
