--- a/frontend/src/app/sliding-puzzle/sliding-puzzle.component.css
+++ b/frontend/src/app/sliding-puzzle/sliding-puzzle.component.css
@@ -3,6 +3,7 @@ section {
     height: 400px;
     border: 3px solid black;
     position: relative;
+    background-color: #1976d2;
 }
 
 section div {
@@ -16,9 +17,71 @@ section div {
     font-size: 32px;
     cursor: pointer;
     position: absolute;
+    background-image: url("../../assets/ss-logo.png");
+    background-size: 400px;
 }
 
 section div span {
     display: block;
     margin-top: 24px;
+}
+
+.slot0 {
+    background-position: 0% 0%;
+}
+
+.slot1 {
+    background-position: 33.33% 0%;
+}
+
+.slot2 {
+    background-position: 66.66% 0%;
+}
+
+.slot3 {
+    background-position: 100% 0%;
+}
+
+.slot4 {
+    background-position: 0% 33.33%;
+}
+
+.slot5 {
+    background-position: 33.33% 33.33%;
+}
+
+.slot6 {
+    background-position: 66.66% 33.33%;
+}
+
+.slot7 {
+    background-position: 100% 33.33%;
+}
+
+.slot8 {
+    background-position: 0% 66.66%;
+}
+
+.slot9 {
+    background-position: 33.33% 66.66%;
+}
+
+.slot10 {
+    background-position: 66.66% 66.66%;
+}
+
+.slot11 {
+    background-position: 100% 66.66%;
+}
+
+.slot12 {
+    background-position: 0% 100%;
+}
+
+.slot13 {
+    background-position: 33.33% 100%;
+}
+
+.slot14 {
+    background-position: 66.66% 100%;
 }
