--- a/frontend/src/app/sliding-puzzle/sliding-puzzle.component.css
+++ b/frontend/src/app/sliding-puzzle/sliding-puzzle.component.css
@@ -17,7 +17,7 @@ section div {
     font-size: 32px;
     cursor: pointer;
     position: absolute;
-    background-image: url("../../assets/ss-logo.png");
+    /* background-image: url("../../assets/mackinator.png"); */
     background-size: 400px;
 }
 
