--- a/frontend/src/app/sliding-puzzle/sliding-puzzle.component.css
+++ b/frontend/src/app/sliding-puzzle/sliding-puzzle.component.css
@@ -1,4 +1,5 @@
 section {
+    display: inline-block;
     width: 400px;
     height: 400px;
     border: 3px solid black;
@@ -10,14 +11,12 @@ section div {
     display: inline-block;
     width: 100px;
     height: 100px;
-    background-color: #1976d2;
     font-weight: bold;
     color: white;
     text-align: center;
     font-size: 32px;
     cursor: pointer;
     position: absolute;
-    /* background-image: url("../../assets/mackinator.png"); */
     background-size: 400px;
 }
 
@@ -84,4 +83,29 @@ section div span {
 
 .slot14 {
     background-position: 66.66% 100%;
+}
+
+aside {
+    float: right;
+    width: 240px;
+}
+
+aside h2 {
+    font-size: 20px;
+    margin: 0 0 .5em 0;
+    color: rgb(172, 18, 18);
+}
+
+aside div {
+    margin-bottom: 24px;
+}
+
+aside div button {
+    width: 120px;
+    height: 100px;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    color: #1976d2;
 }
