--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -1,3 +1,34 @@
 app-method {
     position: relative;
 }
+
+section {
+    display: inline-block;
+}
+
+aside {
+    float: right;
+    width: 240px;
+}
+
+aside h2 {
+    font-size: 20px;
+    margin: 0 0 .5em 0;
+    color: rgb(172, 18, 18);
+    text-align: center;
+}
+
+aside div {
+    margin-bottom: 24px;
+}
+
+aside div button {
+    vertical-align: top;
+    width: 120px;
+    height: 100px;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    color: #1976d2;
+}
