Sequence added, UI improvements

--- a/frontend/src/app/nav/nav.component.html
+++ b/frontend/src/app/nav/nav.component.html
@@ -1,5 +1,6 @@
 <nav>
     <a routerLink="">Home</a>
-    <a routerLink="runaround">Runaround</a>
+    <a routerLink="sequence">Sequence</a>
+    <a routerLink="runaround">Simultaneous</a>
     <a routerLink="sliding-puzzle">Sliding Puzzle</a>
 </nav>
