--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,12 +1,13 @@
 footer {
     color: white;
     padding: 8px 12px;
-    background-color: #1976d2;
+    background-image: linear-gradient(#1976d2 70%, white);
     text-align: right;
+    height: 80px;
 }
 
 footer h6 {
-    margin: 0 0 .5em 0;
+    margin: 0 0 .25em 0;
     font-size: 14px;
 }
 
