Comments and cleanup

--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -32,3 +32,8 @@ aside div button {
     cursor: pointer;
     color: #1976d2;
 }
+
+aside div button:disabled {
+    color: lightgray;
+    cursor: default;
+}
