--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -4,7 +4,9 @@
     </h1>
 
     <section>
+        <!-- whenever the list size changes, the animation triggers -->
         <div [@listAppear]="methodList.length">
+            <!-- looping through the list of visible methods -->
             @for (method of methodList; track $index) {
                 <app-method [method]="method"></app-method>
             }
