--- a/frontend/src/app/sliding-puzzle/sliding-puzzle.component.css
+++ b/frontend/src/app/sliding-puzzle/sliding-puzzle.component.css
@@ -110,3 +110,8 @@ aside div button {
     cursor: pointer;
     color: #1976d2;
 }
+
+aside div button:disabled {
+    color: lightgray;
+    cursor: default;
+}
