--- a/frontend/src/app/sliding-puzzle/sliding-puzzle.component.html
+++ b/frontend/src/app/sliding-puzzle/sliding-puzzle.component.html
@@ -35,7 +35,22 @@
         <div>
             <button (click)="shuffleTiles()">SHUFFLE</button>
             <button (click)="resetTiles()"
-                    [disabled]="tiles === tilesReset">RESET</button>
+                    [disabled]="grid[15][0] === 0 
+                             && tiles[0][1] === 1
+                             && tiles[1][1] === 2
+                             && tiles[2][1] === 3
+                             && tiles[3][1] === 4
+                             && tiles[4][1] === 5
+                             && tiles[5][1] === 6
+                             && tiles[6][1] === 7
+                             && tiles[7][1] === 8
+                             && tiles[8][1] === 9
+                             && tiles[9][1] === 10
+                             && tiles[10][1] === 11
+                             && tiles[11][1] === 12
+                             && tiles[12][1] === 13
+                             && tiles[13][1] === 14
+                             && tiles[14][1] === 15">RESET</button>
         </div>
     </aside>
 
